--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
@@ -34,7 +37,7 @@ h1 {
     font-family: Norse-Bold;
     font-size: 6em;
     color: white;
-
+    margin-left: 5px;
 }
 
 .image-credit {
@@ -44,12 +47,134 @@ h1 {
     color: white;
 }
 
-a:visited {
+.img-container a:visited {
     color: rgb(220, 220, 197);
 }
 
 .signup-container {
+    box-sizing: border-box;
     background-color: rgb(220, 220, 197);
     width: 65vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-family: 'Roboto', sans-serif;
+    gap: 30px;
+}
+
+.signup-container p {
+    margin-left: 60px;
+    line-height: 1.5rem;
+    font-size: 1.3rem;
+}
+
+form {
+    background-color: rgb(241, 241, 199);
+    box-shadow: 0 8px 10px 5px rgb(145, 145, 145);
+    box-sizing: border-box;
+    padding: 20px 70px;
+}
+
+form h3 {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+}
+
+fieldset {
+    border: none;
+    display: flex;
+    margin-bottom: 10px;
+}
+
+ul {
+    display: flex;
+    gap: 20px;
+}
+
+li {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+
+}
+
+label {
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+}
+
+input {
+    width: 400px;
+    line-height: 1.5rem;
+    box-sizing: border-box;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid rgb(145, 145, 145);
+    font-size: 1.25rem;
+    padding: 7px;
+}
+
+input:focus {
+    background-color: rgb(235, 234, 234);
+}
+
+.signup-container button {
+    box-sizing: border-box;
+    margin-left: 60px;
+    width: 200px;
+    background-color: rgb(132, 132, 89);
+    font-family: 'Roboto', sans-serif;
+    color: rgb(245, 245, 245);
+    padding: 10px 20px;
+    text-transform: capitalize;
+    border-radius: 5px;
+    font-size: 1.25rem;
+    letter-spacing: 1px;
+    border: none;
+    box-shadow: 0px 5px 5px 5px rgb(194, 194, 194);
+}
+
+.signup-container button:active {
+    transform: translateY(2px);
+    box-shadow: 0px 3px 5px 5px rgb(194, 194, 194);
+}
+
+@media (max-width:1400px) {
+
+    body {
+        flex-direction: column;
+    }
+
+    .img-container {
+        width: 100vw;
+        height: 200px;
+        background-size: cover;
+    }
+
+    .logo {
+        top: 20px;
+    }
+
+
+    .signup-container {
+        width: 100vw;
+        height: auto;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
+    .signup-container p,
+    .signup-container button {
+        margin-left: 30px;
+    }
+
+    form {
+        padding-left: 30px;
+    }
+
+    ul {
+        flex-direction: column;
+    }
 }
