--- a/style.css
+++ b/style.css
@@ -26,11 +26,11 @@ body {
 .logo {
     height: 100px;
     width: 100%;
+    position: absolute;
+    top: 20vh;
     display: flex;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.2);
-    position: absolute;
-    top: 20vh;
 }
 
 h1 {
@@ -65,19 +65,21 @@ h1 {
 
 .signup-container p {
     margin-left: 60px;
+    width: min(800px, 85%);
     line-height: 1.5rem;
     font-size: 1.3rem;
 }
 
 form {
-    background-color: rgb(241, 241, 199);
+    background-color: rgb(207, 207, 182);
     box-shadow: 0 8px 10px 5px rgb(145, 145, 145);
     box-sizing: border-box;
-    padding: 20px 70px;
+    padding: 40px 70px;
 }
 
 form h3 {
     font-size: 1.5rem;
+    color: rgb(51, 51, 14);
     margin-bottom: 20px;
 }
 
@@ -116,9 +118,23 @@ input {
     padding: 7px;
 }
 
+input[type="password"] {
+    border: 1px solid red;
+}
+
 input:focus {
     background-color: rgb(235, 234, 234);
 }
+
+input:valid {
+    border: 1px solid green;
+}
+
+.pass-output {
+    color: red;
+    font-size: 0.8rem;
+}
+
 
 .signup-container button {
     box-sizing: border-box;
@@ -139,6 +155,14 @@ input:focus {
 .signup-container button:active {
     transform: translateY(2px);
     box-shadow: 0px 3px 5px 5px rgb(194, 194, 194);
+}
+
+p a:unvisited {
+    color: rgb(132, 132, 89);
+}
+
+p a:visited {
+    color: rgb(51, 51, 14);
 }
 
 @media (max-width:1400px) {
